# deltaml4ccsd

./: README.md  pyproject.toml
datasets/Handcrafted_Descriptors/BPBrBr/CCSD_DFT/: 1_standardize_structure_names_original_wo_reordering.py  1_train_handcrafted_delta_ml_models.py  2_Move_Lines_Indices.py  2_select_candidate_structures.py  3_train_handcrafted_delta_ml_models.py  4_select_candidate_structures.py  CCSD_ML_Final.txt  DFT.txt  DFT_ML_Final.txt  ML_Pipeline.py  Values_Within_Range_SVR_DFT.txt  all_regression_metrics.txt  final_gb_model_92.pkl  final_gbr_delta_ccsd_dft.pkl  final_svr_pipeline_92.pkl  processed_xyz_files_final.txt  processed_xyz_files_renamed.txt  processed_xyz_files_reordered.txt  processed_xyz_files_reordered_original_names.txt  row_permutation_keep_972_fixed.txt
datasets/Handcrafted_Descriptors/BPBrBr/CCSD_MP2/: 1_Reorder_dataset_keep_known_fixed.py  1_train_handcrafted_delta_ml_models.py  2_select_candidate_structures.py  3_train_handcrafted_delta_ml_models.py  4_select_candidate_structures.py  CCSD.txt  ML_Pipeline.py  MP2_ML_Final.txt  (+10 more)
src/deltaml4ccsd/: __init__.py  common.py  select_candidates.py  train_handcrafted.py  train_soap.py
src/deltaml4ccsd/configs/: BPBrBr_CCSD_DFT_handcrafted.json  BPBrBr_CCSD_MP2_handcrafted.json  BPBrBr_CCSD_MP2_soap.json  BPClCl_CCSD_DFT_handcrafted.json  BPClCl_CCSD_MP2_handcrafted.json  BPClCl_CCSD_MP2_soap.json  BPFF_CCSD_DFT_handcrafted.json  BPFF_CCSD_MP2_handcrafted.json  BPFF_CCSD_MP2_soap.json  README.md
tools/: create_src_layout_and_configs.py  rename_txt_data_files_to_dat.py
(+16919 files in other folders)
